--- a/HelloWorld.Rmd
+++ b/HelloWorld.Rmd
@@ -2,7 +2,7 @@
 title: "HelloWorld"
 author: "candy-ca"
 date: "2025-03-19"
-output: html_document
+output: html_document `
 ---
 
 ## This is a Markdown file for you.hello girtlie
